--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "mapRoot": "./sketch/",
-    "module": "none",
+    "module": "ES6",
     "noImplicitAny": true,
     "outFile": "./build/build.js",
     "preserveConstEnums": true,
@@ -9,6 +9,6 @@
     "rootDir": "./sketch/",
     "sourceMap": true,
     "sourceRoot": "./sketch/",
-    "target": "es5"
+    "target": "es6"
   }
 }
